Это выполненая штука
Здесь мы сделали классную штуку

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </nav>
     <div class="article-list">
         <div class="article">
+
+            <h2>"Это задание юноу" </h2>
             <h2>Пример научной статьи 1</h2>
             <p>Краткое описание первой научной статьи. Очень интересное исследование на важную тему.</p>
         </div>
@@ -26,6 +28,8 @@
         </div>
         <!-- Добавьте больше статей по необходимости -->
     </div>
+
+
     <footer>
         <p>&copy; 2024 Научные статьи. Все права защищены.</p>
     </footer>
