--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="article-list">
         <div class="article">
 
-            <h2>"Это задание юноу" </h2>
+            <h2>Я выполнил это задание</h2>
             <h2>Пример научной статьи 1</h2>
             <p>Краткое описание первой научной статьи. Очень интересное исследование на важную тему.</p>
         </div>
